minor updates
changelog:
-user_token introduced (for the loriot api)
-minor diagram fixes
-functional test for PersistenceService (not finished)
