# source/Web API Server Application/SEP4_Data/Model/User.cs
@@ -14,6 +14,8 @@ namespace SEP4_Data.Model
         public int? PermissionLevel { get; set; }
         [JsonPropertyName("user_type")]
         public string Permission { get; set; }
+        [JsonPropertyName("user_token")]
+        public string Token { get; set; }
         
         public override string ToString()
         {
@@ -25,7 +27,7 @@ namespace SEP4_Data.Model
             if (!(obj is User))
                 return false;
             User user = (User) obj;
-            return Key == user.Key && Name == user.Name && Permission == user.Permission;
+            return Key == user.Key && Name == user.Name && Permission == user.Permission && Token == user.Token;
         }
     }
 }
